--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_cached_uuid
-description: "A new Flutter project."
+description: "Get uuid for current project."
 version: 1.0.5
 homepage: https://github.com/flappygod/flutter_cached_uuid.git
 
