--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_cached_uuid
-description: "Get uuid for current project."
-version: 1.0.6
+description: "Get uuid for current project.In Android,We use android id and fingerprint to generate the ID,In IOS,We use keychain to save the uuid."
+version: 1.0.7
 homepage: https://github.com/flappygod/flutter_cached_uuid.git
 
 environment:
